# base_monopolio

./: README.md
mono-01/: README.md  pyproject.toml  superpagina.py
mono-01/.viz/: stats.json
mono-01/conf/base/: catalog.yml  parameters_calculo_mono.yml  parameters_data_mono.yml  parameters_modelo_mono.yml
mono-01/notebooks/: exploracion final.ipynb  exploracion_mono.ipynb  modelos_mono.ipynb  primera_exploracion.ipynb
mono-01/src/mono_01/: __init__.py  __main__.py  settings.py
mono-01/src/mono_01/pipelines/calculo_mono/: __init__.py  nodes.py  pipeline.py
mono-01/src/mono_01/pipelines/data_mono/: __init__.py  nodes.py  pipeline.py
mono-01/src/mono_01/pipelines/modelo_mono/: __init__.py  nodes.py  pipeline.py
mono-01/tests/pipelines/calculo_mono/: test_pipeline.py
mono-01/tests/pipelines/data_mono/: test_pipeline.py
mono-01/tests/pipelines/modelo_mono/: test_pipeline.py
