[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "mono_01"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
mono-01 = "mono_01.__main__:main"

[tool.kedro]
package_name = "mono_01"
project_name = "mono_01"
kedro_init_version = "0.19.9"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "mono_01.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "037351b0038e4565a21326ac3f4b1b58"
